Cria interface.py e ajusta main.py para integração
Co-authored-by: Arthur Brito <128443464+br-1t0@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 # SE NO WINDOWS, INSTALE NPCAP EM MODO DE COMPATIBILIDADE
 scapy
 pyftpdlib
+
+# PACOTES PARA A INTERFACE
+streamlit
+streamlit-autorefresh
+pandas
